Fix mobile recipe filters menu alignment

--- a/src/app/recipe/recipe-list/recipe-list.component.scss
+++ b/src/app/recipe/recipe-list/recipe-list.component.scss
@@ -17,9 +17,6 @@ h2 {
   padding: 5px;
   min-width: fit-content;
 }
-.mat-mdc-menu-item {
-  display: block;
-}
 .recipe-card {
   width: 300px;
   margin: 10px;
